# HUCS

./: .gitignore  README.md
1yy/AİT203/: OkanALAN-21526638_canakkalecephesi_odevi.pptx
1yy/BBM101 Introduction to Programming I/C&C++Dersleri/C-Fonksiyonlar/C-Fonksiyonlar/: CMakeLists.txt  cppio.cpp
1yy/BBM101 Introduction to Programming I/C&C++Dersleri/C-Pointerlar/C-Pointerlar/: CMakeLists.txt  pointerdizi.cpp
2yy/BBM102_Introduction_to_Programming_II/: Terimler.docx
4yy/AIT204_Atatürk's_Princ._And_The_History_of_The_Revol._II/: ait_PEYAMI__SAFA_VE_TURK_INKILABINA_BAKISLAR.docx
4yy/BBM202 Algorithms/: BBM202_beratnotes.docx
4yy/BBM234/: malzeme.txt
4yy/BBM234_Computer_Organization/: SingleCycle_Processor_Examples.pptx
4yy/HAS/: 233.txt
4yy/IST292/: IST292_berat.docx  okan_engine.doc  okan_pi.doc
4yy/IST292_Statistics/: kapak.docx
5yy/BBM301/: expRegEx.txt  homework1.doc
5yy/BBM301_Programming_Languages/: scheme_samples.txt
5yy/BBM341 Systems Programming/: README.md
6yy/BBM342 Operating Systems/: notes2.docx
6yy/sec179/: okanAnkara.docx  sunum.pptx
7yy/bbm473/: project.txt
8yy/469/: assigment.txt
8yy/497/: assignments.txt  project.txt
8yy/bbm428/: README.md
Electives/BBM408 Algorithm Analysis/: sınavlar.txt
Electives/BBM453_Computer_Networks_Laboratory/: Final-Lab.docx  LAN-PacketTracer-Switch.pkt  LAN-PacketTracer.pkt  final.pkt
Electives/BBM456 Computer and Network Security/: README.md
Electives/BBM467 Data Intensive Applications/: examples.odt
Electives/BBM469 Data Intensive Applications Laboratory/: project.txt
(+468 files in other folders)
